// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/markdownEditor should match snapshot 1`] = `
<div>
  <div
    class="MarkdownEditor octo-editor classname-test "
  >
    <div
      class="octo-editor-preview octo-placeholder"
      data-testid="preview-element"
    />
  </div>
</div>
`;

exports[`components/markdownEditor should match snapshot with initial text 1`] = `
<div>
  <div
    class="MarkdownEditor octo-editor classname-test "
  >
    <div
      class="octo-editor-preview"
      data-testid="preview-element"
    />
  </div>
</div>
`;

exports[`components/markdownEditor should match snapshot with on click on preview element 1`] = `
<div>
  <div
    class="MarkdownEditor octo-editor classname-test active"
  >
    <div
      class="MarkdownEditorInput"
    >
      <div
        class="MarkdownEditorInput__content"
        contenteditable="true"
        data-lexical-editor="true"
        role="textbox"
        spellcheck="true"
        style="user-select: text; white-space: pre-wrap; word-break: break-word;"
      >
        <p
          dir="auto"
        >
          <span
            data-lexical-text="true"
          >
            some initial text already set
          </span>
        </p>
      </div>
      
      
    </div>
  </div>
</div>
`;

exports[`components/markdownEditor should match snapshot with on click on preview element and then click out of it 1`] = `
<div>
  <div
    class="MarkdownEditor octo-editor classname-test active"
  >
    <div
      class="MarkdownEditorInput"
    >
      <div
        class="MarkdownEditorInput__content"
        contenteditable="true"
        data-lexical-editor="true"
        role="textbox"
        spellcheck="true"
        style="user-select: text; white-space: pre-wrap; word-break: break-word;"
      >
        <p
          dir="auto"
        >
          <span
            data-lexical-text="true"
          >
            some initial text already set
          </span>
        </p>
      </div>
      
      
    </div>
  </div>
</div>
`;
